--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,8 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
+    <script src="js/clock-service.js"></script>
+    <script src="js/map-resource-service.js"></script>
   </head>
 
   <body ng-app="sftw" ng-controller="MapCtrl">
@@ -32,7 +34,7 @@
     </ion-header-bar>
 
     <ion-content scroll="false">
-      <map on-create="mapCreated(map)"></map>
+      <map on-create="initializeMap(map)"></map>
     </ion-content>
 
     <ion-footer-bar class="bar-stable">
